# vulkan-learning

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  build.cmake  format_all.sh  options.cmake
assets/astroboy/: astro_boy_animation.hpp  astro_boy_geometry.hpp  astro_boy_mips.ktx  astro_boy_mips.ktx2  astro_boy_skeleton.hpp  astro_boy_uastc.ktx2
assets/shaders/: shader.frag  shader.vert  tri.frag.spv  tri.vert.spv
src/: camera.cpp  camera.hpp  camera.inl  common.hpp  config.hpp  gltf_loader.hpp  main.cpp  skeletal_animation.hpp  utils.hpp  vulkan_astro_boy.hpp
src/vulkan/: vulkan_rhi.hpp
